--- a/index.html
+++ b/index.html
@@ -7,11 +7,34 @@
     <title>Influencer-Gear</title>
     <!-- stylesheet  -->
     <link rel="stylesheet" href="style.css">
+    <!-- Google fonts  -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
+    <!-- font-awesome  -->
+    <script src="https://kit.fontawesome.com/71585ecaf8.js" crossorigin="anonymous"></script>
+    
+    
 </head>
 <body>
     <!-- header section start  -->
     <header>
-        <h1 class="test">Hello</h1>
+        <nav class="nav-var">
+            <div class="flex-nav">
+                <div class="left-nav">
+                    <h3 class="left-text">Influencer products</h3>
+                </div>
+                <div class="right-nav">
+                    <ul>
+                        <li><a href="">Home</a></li>
+                        <li><a href="">Products</a></li>
+                        <li><a href="">Sign up</a></li>
+                        <li><a href="">Log in</a></li>
+                        <div class="font-awesome">
+                            <i class="fa-solid fa-magnifying-glass"></i>
+                        </div>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </header>
     <!-- header section end  -->
 
