--- a/index.html
+++ b/index.html
@@ -40,7 +40,24 @@
 
             <!-- main section start  -->
     <main>
+        <div class="section-1">
+            <div class="artical">
+                <div class="artical-name">
+                    <p class="artical-title">
+                        start your journey as <p class="break-title">Influencer</p>
+                    </p>
+                </div>
+                <div class="artical-info">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero, error modi corporis, magni asperiores quaerat natus libero nesciunt accusantium vitae possimus veritatis nemo ratione quidem eius? Earum voluptas consequatur reprehenderit ea soluta saepe reiciendis, quod neque est et suscipit rerum quaerat nostrum eaque! Impedit repellendus laboriosam illo ut voluptate libero!
+                </div>
+                <div class="button">
+                    <button class="press">Prebook Now</button>
+                </div>
+            </div>
+            <div class="thumbnail">
 
+            </div>
+        </div>
     </main>
             <!-- main section end  -->
 
