--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
                 </div>
             </div>
             <div class="thumbnail">
-
+                <div class="image">
+                    <img src="images/main-camera.png" alt="">
+                </div>
             </div>
         </div>
     </main>
