--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 
             <!-- main section start  -->
     <main>
+        <!-- section-1 start  -->
         <div class="section-1">
             <div class="artical">
                 <div class="artical-name">
@@ -60,6 +61,28 @@
                 </div>
             </div>
         </div>
+        <!-- section-1 end  -->
+        <!-- section-2 start  -->
+        <div class="section-2">
+            <div class="hr-logo">
+                <div>
+                    <hr class="hr-top">
+                </div>
+                <div class="logo-name">
+                    <img src="logos/Alibaba.svg" alt="">
+                    <img src="logos/Amazon.svg" alt="">
+                    <img src="logos/Daraz.pk Logo.svg" alt="">
+                    <img src="logos/Ebay.svg" alt="">
+                    <img src="logos/Rakuten.svg" alt="">
+                    <img src="logos/Target.svg" alt="">
+                    <img src="logos/Walmart.svg" alt="">
+                </div>
+                <div>
+                    <hr class="hr-bottom">
+                </div>
+            </div>
+        </div>
+        <!-- section-2 end  -->
     </main>
             <!-- main section end  -->
 
