--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Google fonts  -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
     <!-- font-awesome  -->
-    <script src="https://kit.fontawesome.com/71585ecaf8.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/fd77b927d2.js" crossorigin="anonymous"></script>
     
     
 </head>
@@ -29,7 +29,9 @@
                         <li><a href="">Sign up</a></li>
                         <li><a href="">Log in</a></li>
                         <div class="font-awesome">
-                            <i class="fa-solid fa-magnifying-glass"></i>
+                            <span class="nav-icon">
+                                <i class="fa-solid fa-magnifying-glass"></i>
+                            </span>
                         </div>
                     </ul>
                 </div>
@@ -89,6 +91,278 @@
         <div class="section-3">
             <div class="popular-collection">
             <h3 class="title">Popular Collecton</h3>
+            <div class="all-collection">
+                <div class="Flex-Tripod">
+                    <div class="maintain">
+                        <div class="images">
+                            <img src="images/tripod.png" alt="">
+                        </div>
+                        <div class="tripod-details">
+                            <h3 class="heading">
+                                Flex-Tripod
+                            </h3>
+                            <p class="price">
+                                $50.48
+                            </p>
+                            <div class="ratings">
+                                <span class="icon">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-stroke"></i>
+                                </span>
+                                <span class="digit">4.99</span>
+                            </div>
+                            <div class="info">
+                                <p class="first">Wordwide shifting </p>
+                                <p class="mid">available </p>
+                                <p class="last">Buyers protection possible! </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="Flex-Tripod">
+                    <div class="maintain">
+                        <div class="images">
+                            <img src="images/mic.png" alt="">
+                        </div>
+                        <div class="tripod-details">
+                            <h3 class="heading">
+                                Microphone
+                            </h3>
+                            <p class="price">
+                                $120.25
+                            </p>
+                            <div class="ratings">
+                                <span class="icon">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star-half-stroke"></i>
+                                </span>
+                                <span class="digit">4.99</span>
+                            </div>
+                            <div class="info">
+                                <p class="first">Wordwide shifting </p>
+                                <p class="mid">available </p>
+                                <p class="last">Buyers protection possible! </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="Flex-Tripod">
+                    <div class="maintain">
+                        <div class="images">
+                            <img src="images/airpod.png" alt="">
+                        </div>
+                        <div class="tripod-details">
+                            <h3 class="heading">
+                                Airbuds
+                            </h3>
+                            <p class="price">
+                                $100.00
+                            </p>
+                            <div class="ratings">
+                                <span class="icon">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star-half-stroke"></i>
+                                 </span>
+                                <span class="digit">4.99</span>
+                            </div>
+                            <div class="info">
+                                <p class="first">Wordwide shifting </p>
+                                <p class="mid">available </p>
+                                <p class="last">Buyers protection possible! </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="Flex-Tripod">
+                    <div class="maintain">
+                        <div class="images">
+                            <img src="images/drone.png" alt="">
+                        </div>
+                        <div class="tripod-details">
+                            <h3 class="heading">
+                                Drone 
+                            </h3>
+                            <p class="price">
+                                $980.25
+                            </p>
+                            <div class="ratings">
+                                <span class="icon">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star-half-stroke"></i>
+                                </span>
+                                <span class="digit">4.99</span>
+                            </div>
+                            <div class="info">
+                                <p class="first">Wordwide shifting </p>
+                                <p class="mid">available </p>
+                                <p class="last">Buyers protection possible! </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="Flex-Tripod">
+                    <div class="maintain">
+                        <div class="images">
+                            <img src="images/lights.png" alt="">
+                        </div>
+                        <div class="tripod-details">
+                            <h3 class="heading">
+                                Light Setup
+                            </h3>
+                            <p class="price">
+                                $1200.00
+                            </p>
+                            <div class="ratings">
+                                <span class="icon">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star-half-stroke"></i>
+                                </span>
+                                <span class="digit">4.99</span>
+                            </div>
+                            <div class="info">
+                                <p class="first">Wordwide shifting </p>
+                                <p class="mid">available </p>
+                                <p class="last">Buyers protection possible! </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="Flex-Tripod">
+                    <div class="maintain">
+                        <div class="images">
+                            <img src="images/setup.png" alt="">
+                        </div>
+                        <div class="tripod-details">
+                            <h3 class="heading">
+                                Photoshoot Set 
+                            </h3>
+                            <p class="price">
+                                $820.40 
+                            </p>
+                            <div class="ratings">
+                                <span class="icon">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star-half-stroke"></i>
+                                </span>
+                                <span class="digit">4.99</span>
+                            </div>
+                            <div class="info">
+                                <p class="first">Wordwide shifting </p>
+                                <p class="mid">available </p>
+                                <p class="last">Buyers protection possible! </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="Flex-Tripod">
+                    <div class="maintain">
+                        <div class="images">
+                            <img src="images/camera.png" alt="">
+                        </div>
+                        <div class="tripod-details">
+                            <h3 class="heading">
+                                Vlogging Camera
+                            </h3>
+                            <p class="price">
+                                $1800.48
+                            </p>
+                            <div class="ratings">
+                                <span class="icon">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star-half-stroke"></i>
+                                </span>
+                                <span class="digit">4.99</span>
+                            </div>
+                            <div class="info">
+                                <p class="first">Wordwide shifting </p>
+                                <p class="mid">available </p>
+                                <p class="last">Buyers protection possible! </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="Flex-Tripod">
+                    <div class="maintain">
+                        <div class="images">
+                            <img src="images/single-light.png" alt="">
+                        </div>
+                        <div class="tripod-details">
+                            <h3 class="heading">
+                                Green Screen
+                            </h3>
+                            <p class="price">
+                                $25.48
+                            </p>
+                            <div class="ratings">
+                                <span class="icon">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star-half-stroke"></i>
+                                </span>
+                                <span class="digit">4.99</span>
+                            </div>
+                            <div class="info">
+                                <p class="first">Wordwide shifting </p>
+                                <p class="mid">available </p>
+                                <p class="last">Buyers protection possible! </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="Flex-Tripod">
+                    <div class="maintain">
+                        <div class="images">
+                            <img src="images/action.png" alt="">
+                        </div>
+                        <div class="tripod-details">
+                            <h3 class="heading">
+                                Action Camera
+                            </h3>
+                            <p class="price">
+                                $380.00
+                            </p>
+                            <div class="ratings">
+                                <span class="icon">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star-half-stroke"></i>
+                                </span>
+                                <span class="digit">4.99</span>
+                            </div>
+                            <div class="info">
+                                <p class="first">Wordwide shifting </p>
+                                <p class="mid">available </p>
+                                <p class="last">Buyers protection possible! </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
             </div>
         </div>
         <!-- ____________Collection_____________  -->
