--- a/index.html
+++ b/index.html
@@ -364,6 +364,14 @@
                 </div>
             </div>
             </div>
+            <div class="bottom-part">
+                <span class="bottom-flex">
+                    <p class="section-bottom">
+                        See More
+                    </p>
+                    <i class="fa-solid fa-arrow-right" class="arrow"></i>
+                </span>
+            </div>
         </div>
         <!-- ____________Collection_____________  -->
     </main>
