--- a/index.html
+++ b/index.html
@@ -374,6 +374,29 @@
             </div>
         </div>
         <!-- ____________Collection_____________  -->
+        <!-- ____________Features_____________  -->
+        <div class="section-4">
+            <div class="Features">
+                <div class="thumbnail">
+                    <img src="images/gear.png" alt="">
+                </div>
+                <article class="product-details">
+                    <h3 class="product-title">
+                        Featured products at one place
+                    </h3>
+                    <p class="product-info">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus, iure! Blanditiis nesciunt repudiandae amet aliquam soluta in, nostrum eveniet similique!
+                    </p>
+                    <div class="btn-with-arrow">
+                        <button type="button" class="btn">Join  Now</button>
+                        <div id="direction">
+                            <i class="fa-solid fa-arrow-right white-color"></i>
+                        </div>
+                    </div>
+                </article>
+            </div>
+        </div>
+        <!-- ____________Features_____________  -->
     </main>
            
 
