--- a/index.html
+++ b/index.html
@@ -401,7 +401,26 @@
            
 
     <footer>
-
+        <!-- ____________Footer_____________  -->
+        <div class="section-5">
+            <div class="footer-info">
+                <h3 class="footer-title">
+                    Influencer products
+                </h3>
+                <div class="footer-mid">
+                    <span class="lil-info">copyright <span><i class="fa-solid fa-copyright copy-icon"></i></span> <span class="lil-info">influencer products</span>
+                </span>
+                </div>
+                <p class="last">All rights reserved</p>
+                <div class="all-icon">
+                    <i class="fa-brands fa-instagram same-color"></i>
+                    <i class="fa-brands fa-google same-color"></i>
+                    <i class="fa-brands fa-twitter same-color"></i>
+                    <i class="fa-brands fa-youtube same-color"></i>
+                </div>
+            </div>
+        </div>
+        <!-- ____________Footer_____________  -->
     </footer>
 
 </body>
